image upload to cloudinary, adding upating and safe deleting methods for products